--- a/front_vue/front_vue/src/assets/css/main.css
+++ b/front_vue/front_vue/src/assets/css/main.css
@@ -23,3 +23,19 @@ a {
 .el-button+.el-tooltip {
   margin-left: 10px;
 }
+
+.content-box {
+  position: absolute;
+  left: 250px;
+  right: 0;
+  top: 70px;
+  bottom: 0;
+  padding-bottom: 30px;
+  -webkit-transition: left .3s ease-in-out;
+  transition: left .3s ease-in-out;
+  background: #f0f0f0;
+}
+
+.content-collapse {
+  left: 65px;
+}
