--- a/front_vue/front_vue/src/assets/css/color-dark.css
+++ b/front_vue/front_vue/src/assets/css/color-dark.css
@@ -5,6 +5,6 @@
   background-color: #242f42;
 }
 .tags-li.active {
-  border: 1px solid #409EFF !important;
-  background-color: #409EFF !important;
+  border: 1px solid #409EFF;
+  background-color: #409EFF;
 }
