--- a/front_vue/front_vue/src/assets/css/main.css
+++ b/front_vue/front_vue/src/assets/css/main.css
@@ -35,6 +35,13 @@ a {
   transition: left .3s ease-in-out;
   background: #f0f0f0;
 }
+.content {
+  width: auto;
+  height: 100%;
+  padding: 10px;
+  overflow-y: scroll;
+  box-sizing: border-box;
+}
 
 .content-collapse {
   left: 65px;
